--- a/tests/_setup/fakes/SimpleRESTDispatchHandler.cls
+++ b/tests/_setup/fakes/SimpleRESTDispatchHandler.cls
@@ -1,7 +1,7 @@
 Class Test.Forgery.Setup.SimpleRESTDispatchHandler Extends (%RegisteredObject, Forgery.IDispatchHandler)
 {
 
-Method OnDispatch(resource As %String, httpMethod As %String, restDispatchClass As %String, cspContext As Forgery.CSP.Context) As %Status
+Method OnDispatch(resource As %String, httpMethod As %String, restDispatchClass As %String, cspContext As Forgery.CSP.Context, interceptor As Forgery.IO.DeviceInterceptor) As %Status
 {
   // Must publish these variables because of how %CSP.Page works.
   set %request = cspContext.Request
