--- a/tests/_setup/Parameters.cls
+++ b/tests/_setup/Parameters.cls
@@ -1,7 +1,7 @@
 Class Test.Forgery.Setup.Parameters
 {
 
-Parameter TESTBASEURL = "/test/forgery/api";
+Parameter TESTBASEURL = "/test/forgery/api/";
 
 Parameter TESTDISPATCHCLASS = "Test.Forgery.Setup.FakeRouter";
 
