--- a/cls/Forgery/Internal/RequestDispatcherFactory.cls
+++ b/cls/Forgery/Internal/RequestDispatcherFactory.cls
@@ -1,6 +1,8 @@
+/// Factory helper for aggregating service dependencies.
 Class Forgery.Internal.RequestDispatcherFactory Extends %RegisteredObject
 {
 
+/// Creates a new request dispatcher by consuming an agent configuration.
 ClassMethod CreateUsingConfiguration(configuration As Forgery.Configuration) As Forgery.Internal.RequestDispatcher
 {
   set resolver = ##class(Forgery.Internal.RESTClassResolver).%New(configuration.GetWebApplication())
