--- a/cls/Forgery/Internal/FormDataEntryIterator.cls
+++ b/cls/Forgery/Internal/FormDataEntryIterator.cls
@@ -1,8 +1,11 @@
+/// A helper for iterating over each FormData entry.
 Class Forgery.Internal.FormDataEntryIterator Extends %RegisteredObject
 {
 
+/// The list being interated over.
 Property Iteratee As %DynamicArray [ Private ];
 
+/// The index indicating the current iteration position in the list.
 Property Index As %Integer [ InitialExpression = 0, Private ];
 
 Method %OnNew(iteratee As %DynamicArray) As %Status
@@ -11,6 +14,8 @@ Method %OnNew(iteratee As %DynamicArray) As %Status
   return $$$OK
 }
 
+/// Retrieves the next entry and returns 1 if there's a next one.
+/// When the list reaches the end, returns 0.
 Method NextEntry(Output entry As %DynamicObject = "") As %Boolean
 {
   if ..Index > (..Iteratee.%Size() - 1) {
